added swagger to the campaign controller
